--- a/index.html
+++ b/index.html
@@ -3,10 +3,77 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Ferplait64 — Décoration métal</title>
-    <meta name="description" content="Décoration métal sur mesure : enseignes, déco murale, plaques personnalisées. Béarn & alentours.">
+
+    <!-- TITRE + DESCRIPTION -->
+    <title>Ferplait64 — Décoration métal sur mesure, Béarn</title>
+    <meta name="description" content="Atelier artisanal de décoration métal sur mesure : enseignes, meubles acier, décorations murales, créations uniques. Fabrication 100% locale dans le Béarn." />
+
+    <!-- CANONICAL -->
+    <link rel="canonical" href="https://www.ferplait64.fr/" />
+
+    <!-- FAVICON -->
     <link rel="icon" href="/favicon.ico" />
+
+    <!-- OPEN GRAPH (Facebook, Instagram…) -->
+    <meta property="og:title" content="Ferplait64 — Décoration métal sur mesure" />
+    <meta property="og:description" content="Créations métal uniques : enseignes, déco murale, meubles acier. Atelier local dans le Béarn." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.ferplait64.fr/" />
+    <meta property="og:image" content="/og-ferplait64.png" />
+
+    <!-- TWITTER CARD -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Ferplait64 — Créations métal sur mesure" />
+    <meta name="twitter:description" content="Atelier artisanal métal à Thèze. Créations uniques en acier et bois." />
+    <meta name="twitter:image" content="https://www.ferplait64.fr/og-ferplait64.png" />
+
+    <!-- SOCIAL PROFILES -->
+    <meta property="og:site_name" content="Ferplait64" />
+    <meta property="profile:username" content="ferplait64" />
+
+    <!-- INSTAGRAM & FACEBOOK -->
+    <link rel="me" href="https://www.instagram.com/ferplait64" />
+    <link rel="me" href="https://www.facebook.com/profile.php?id=100054695803216" />
+
+    <!-- SCHEMA.ORG LOCALBUSINESS -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "Ferplait64",
+      "image": "https://www.ferplait64.fr/og-ferplait64.png",
+      "@id": "https://www.ferplait64.fr/",
+      "url": "https://www.ferplait64.fr/",
+      "telephone": "+33 6 47 80 84 33",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Chemin du Stade",
+        "addressLocality": "Thèze",
+        "postalCode": "64450",
+        "addressCountry": "FR"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 43.478,
+        "longitude": -0.419
+      },
+      "sameAs": [
+        "https://www.instagram.com/ferplait64",
+        "https://www.facebook.com/profile.php?id=100054695803216"
+      ],
+      "description": "Atelier artisanal métal dans le Béarn : décorations murales, enseignes, mobilier acier et créations sur mesure.",
+      "openingHoursSpecification": [
+        {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"],
+          "opens": "09:00",
+          "closes": "18:00"
+        }
+      ]
+    }
+    </script>
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
