Amélioration SEO (suite)

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
       "telephone": "+33 6 47 80 84 33",
       "address": {
         "@type": "PostalAddress",
-        "streetAddress": "Chemin du Stade",
-        "addressLocality": "Thèze",
-        "postalCode": "64450",
+        "streetAddress": "Impasse des vignes",
+        "addressLocality": "Lacq",
+        "postalCode": "64170",
         "addressCountry": "FR"
       },
       "geo": {
